--- a/views/lists.ejs
+++ b/views/lists.ejs
@@ -12,7 +12,7 @@
     <body>
         <div class="box" id = "heading">
            
-            <h1> <%= kindofDay %> </h1>
+            <h1> <%= listTitle %> </h1>
             
         </div>
         
